force-app/main/default/objects/Country__c/fields/Alpha2__c.field-meta.xml
<CustomField>
    <fullName>Alpha2__c</fullName>
    <description>ISO 3166-1 alpha-2 country code</description>
    <label>Alpha2 Code</label>
    <length>2</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>