force-app/main/default/objects/Country__c/fields/Alpha3__c.field-meta.xml
<CustomField>
    <fullName>Alpha3__c</fullName>
    <description>ISO 3166-1 alpha-3 country code</description>
    <label>Alpha3 Code</label>
    <length>3</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>