force-app/main/default/objects/Country__c/fields/Blocs__c.field-meta.xml
<CustomField>
    <fullName>Blocs__c</fullName>
    <description>Acrónimos de bloques regionales, separados por comas</description>
    <label>Regional Blocs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>