force-app/main/default/objects/Country__c/fields/BlocsShort__c.field-meta.xml
<CustomField>
    <fullName>BlocsShort__c</fullName>
    <description>Acrónimos de bloques (máx 255 chars para fórmulas)</description>
    <label>Regional Blocs Short</label>
    <length>255</length>
    <type>Text</type>
</CustomField>