force-app/main/default/objects/Country__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>Identificador externo para upsert. Usaremos Alpha2Code.</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>